Forgot to push this. Silly me

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
+    <div class="js-new">New Game</div>
     <div class="grid-container">
         <div class="grid-row">
             <div class="grid-cell"></div>
